--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -113,7 +113,7 @@
 
 .outline-button-purple {
 	color: $purple-normal;
-	border-color: currentColor;
+	border-color: $purple-normal;
 
 	&:hover {
 		border-color: transparent;
@@ -128,7 +128,7 @@
 
 .outline-button-blue {
 	color: $blue-normal;
-	border-color: currentColor;
+	border-color: $blue-normal;
 
 	&:hover {
 		border-color: transparent;
@@ -143,7 +143,7 @@
 
 .outline-button-pink {
 	color: $pink-normal;
-	border-color: currentColor;
+	border-color: $pink-normal;
 
 	&:hover {
 		border-color: transparent;
@@ -158,7 +158,7 @@
 
 .outline-button-white {
 	color: $white;
-	border-color: currentColor;
+	border-color: $white;
 
 	&:hover {
 		border-color: transparent;
@@ -173,7 +173,7 @@
 
 .btn-info.btn-outline-maxia {
 	color: $pink-normal;
-	border-color: currentColor;
+	border-color: $pink-normal;
 }
 
 .btn-primary.btn-maxia {
@@ -552,7 +552,6 @@
 		border: 2px solid $white;
 		bottom: 0;
 		right: 0;
-		background-image: url('../assets/svg/mini-check.svg')
 	}
 }
 
@@ -589,7 +588,6 @@
 		border: 2px solid $white;
 		bottom: 0;
 		right: 0;
-		background-image: url('../assets/svg/mini-check.svg')
 	}
 }
 
@@ -619,7 +617,6 @@
 		background: $blue-normal;
 		border-radius: 50%;
 		border: 2px solid $white;
-		background-image: url('../assets/svg/mini-check.svg')
 
 	}
 }
